# python-template

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  ruff.toml
.github/: ci.yml
entrypoints/: gunicorn.sh
gunicorn/: gunicorn_conf.py
src/: config.py  constants.py  database.py  main.py  schemas.py  utils.py
tests/: test_main.py
