[project]
name = "Template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "annotated-types>=0.7.0",
    "async-timeout>=5.0.1",
    "asyncpg>=0.30.0",
    "certifi>=2024.12.14",
    "fastapi>=0.115.6",
    "gunicorn>=23.0.0",
    "prometheus-client>=0.21.1",
    "pydantic-settings>=2.7.0",
    "pytest>=8.3.3",
    "python-json-logger>=3.2.1",
    "ruff>=0.7.3",
    "sentry-sdk>=2.19.2",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.34.0",
]
